@@ -1,6 +1,11 @@
 2013-09-03  tasogare66 <tasogare66@gmail.com>
 
 	* red-rogue-cs:
+	Dialog.cs コンパイル通るように
+
+2013-09-03  tasogare66 <tasogare66@gmail.com>
+
+	* red-rogue-cs:
 	Menu.csのコンストラクタ通るように
 
 2013-08-30  tasogare66 <tasogare66@gmail.com>
